{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 12,
  "lineage": "50bc7fdb-043e-511a-371f-69965ce6c578",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfaceae6e9040a87",
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:elastic-ip/eipalloc-0bfaceae6e9040a87",
            "association_id": "eipassoc-0737df0bf2731f58b",
            "domain": "vpc",
            "id": "eipalloc-0bfaceae6e9040a87",
            "instance": "i-0269fdad9349f5a4e",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07cb35eb0d5cdaeac",
            "private_dns": "ip-10-0-0-222.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.222",
            "public_dns": "ec2-15-165-94-47.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.94.47",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.main",
            "aws_key_pair.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.main",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7f51b914bb4b808",
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:instance/i-0269fdad9349f5a4e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0269fdad9349f5a4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tom",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07cb35eb0d5cdaeac"
              }
            ],
            "primary_network_interface_id": "eni-07cb35eb0d5cdaeac",
            "private_dns": "ip-10-0-0-222.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.222",
            "public_dns": "ec2-15-165-201-162.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.201.162",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0d9ce7d0d30b6f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742d4600c1ffd979",
            "tags": {
              "Name": "tom-instance"
            },
            "tags_all": {
              "Name": "tom-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f13fd4e873dc99c7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "i-0269fdad9349f5a4e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.main",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:internet-gateway/igw-0f9c4e98424770528",
            "id": "igw-0f9c4e98424770528",
            "owner_id": "070839874981",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tom-igw"
            },
            "tags_all": {
              "Name": "tom-igw"
            },
            "vpc_id": "vpc-0f5539b85174c973f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:route-table/rtb-04e37bd9dce94e4d3",
            "id": "rtb-04e37bd9dce94e4d3",
            "owner_id": "070839874981",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9c4e98424770528",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tom-rtb"
            },
            "tags_all": {
              "Name": "tom-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5539b85174c973f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "rtb-04e37bd9dce94e4d3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d747adc2d1412fe1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04e37bd9dce94e4d3",
            "subnet_id": "subnet-0742d4600c1ffd979"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:security-group/sg-0f13fd4e873dc99c7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f13fd4e873dc99c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tom-security-group",
            "name_prefix": "",
            "owner_id": "070839874981",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tom-security-group"
            },
            "tags_all": {
              "Name": "tom-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5539b85174c973f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "sg-0f13fd4e873dc99c7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:subnet/subnet-0742d4600c1ffd979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0742d4600c1ffd979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070839874981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tom-subnet"
            },
            "tags_all": {
              "Name": "tom-subnet"
            },
            "vpc_id": "vpc-0f5539b85174c973f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "subnet-0742d4600c1ffd979",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:vpc/vpc-0f5539b85174c973f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097116531769e7304",
            "default_route_table_id": "rtb-01a3cad55c6046ef5",
            "default_security_group_id": "sg-05b7642f20a7bfac7",
            "dhcp_options_id": "dopt-dc2fb5b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5539b85174c973f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a3cad55c6046ef5",
            "owner_id": "070839874981",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tom-vpc"
            },
            "tags_all": {
              "Name": "tom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "vpc-0f5539b85174c973f",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}